# outliyr-cohort-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: engine.py  main.py  pdf_renderer.py  schemas.py  stats_engine.py
tests/: __init__.py  test_engine.py  test_main.py  test_pdf_renderer.py
